<resources>
    <string name="app_name">Purkynka</string>
    <string name="notify_group_update">App updates</string>
    <string name="notify_channel_update_available">Available updates</string>
    <string name="notify_channel_changelog">Changelog</string>
    <string name="notify_channel_name_grades_changes">Grades changes</string>
    <string name="notify_group_name_lunches_burza_watcher_status">Lunches burza watcher</string>
    <string name="notify_channel_name_lunches_burza_watcher_status">Lunches burza watcher status</string>
    <string name="notify_channel_name_lunches_burza_watcher_result">Lunches burza watcher result</string>
    <string name="notify_channel_name_lunches_changes">Lunches changes</string>
    <string name="account_default_name">User</string>
    <string name="notify_update_available_title">Update available</string>
    <string name="notify_update_available_text">New version: %1$s</string>
    <string name="notify_update_available_version_unknown">Unknown</string>
    <string name="notify_version_changes_title">Something was changed</string>
    <string name="notify_version_changes_text">"Find out what's new in version %1$s"</string>
    <string name="notify_version_changes_big_title">Something was changed in version %1$s</string>
    <string name="notify_version_changes_summary_title">Something was changed</string>
    <string name="notify_version_changes_summary_text">"Find out what's new in versions: %1$s"</string>
    <string name="notify_version_changes_summary_line">"Something was changed in version %1$s"</string>
    <string name="notify_grade_new_title">New grade %1$s from %2$s</string>
    <string name="notify_grade_new_text_note">%1$s by %2$s</string>
    <string name="notify_grade_new_text">By %2$s</string>
    <string name="notify_grade_modified_title">Modified grade %1$s from %2$s</string>
    <string name="notify_grade_modified_text_note">%1$s by %2$s</string>
    <string name="notify_grade_modified_text">By %2$s</string>
    <string name="notify_grade_summary_title">New grades</string>
    <string name="notify_grade_summary_text">From: %1$s</string>
    <string name="notify_grade_summary_line">Grade %1$s from %2$s</string>
    <string name="notify_lunches_watcher_status_title">Lunches burza watcher</string>
    <string name="notify_lunches_watcher_status_text">Is running</string>
    <string name="notify_lunches_watcher_result_title_success">Successfully ordered lunch from burza</string>
    <string name="notify_lunches_watcher_result_title_fail">Failed to ordered lunch from burza</string>
    <string name="notify_lunches_watcher_result_text">By lunches burza watcher</string>
    <string name="notify_lunches_watcher_result_text_multi_user">For %1$s by lunches burza watcher</string>
    <string name="notify_lunch_new_title">New lunches on %1$s</string>
    <plurals name="notify_lunch_new_text">
        <item quantity="one">%1$d Lunch option</item>
        <item quantity="other">%1$d Lunch options</item>
    </plurals>
    <string name="notify_lunch_new_big_text_no_options">No options available</string>
    <string name="notify_lunches_new_summary_title">New lunches available</string>
    <string name="notify_lunches_new_summary_text">On %1$s - %2$s</string>
    <string name="notify_lunches_new_summary_text_single_date">On %1$s</string>
    <string name="notify_lunches_new_summary_text_no_date">On -. -.</string>
    <plurals name="notify_lunches_new_summary_line">
        <item quantity="one">%1$d Lunch option on %1$s</item>
        <item quantity="other">%1$d Lunch options on %1$s</item>
    </plurals>
    <string name="title_activity_easter_egg">Application Purkynka</string>
    <string name="title_activity_update">Update check</string>
    <string name="title_activity_version_changes">News in version %1$s</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_debug_tools">Debug tools</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_edit_account">Edit account</string>
    <string name="title_activity_subject">Subject</string>
    <string name="title_activity_grade">Grade</string>
    <string name="title_activity_grade_with_subject">Grade from %1$s</string>
    <string name="title_activity_grades_widget">Setup grades widget</string>
    <string name="title_activity_lunch_options_group">Order lunch</string>
    <string name="title_activity_lunch_options_group_with_date">Order lunch on %1$s</string>
    <string name="title_activity_lunches_burza_lunch">Order lunch</string>
    <string name="title_activity_lunches_burza_lunch_with_date">Order lunch on $1$s</string>
    <string name="title_activity_lunches_next_lunch_widget">Setup next lunch widget</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_grades">Grades</string>
    <string name="title_fragment_wifi_login">WiFi auto login</string>
    <string name="title_fragment_lunches_login">Lunches</string>
    <string name="title_fragment_lunches_order">Lunches order</string>
    <string name="title_fragment_lunches_burza">Lunches burza</string>
    <string name="title_fragment_lunches_burza_watcher">Lunches burza watcher</string>
    <string name="title_fragment_attendance_search">Attendance</string>
    <string name="title_widget_grades">Grades</string>
    <string name="title_widget_grades_with_user">"%1$s's grades"</string>
    <string name="title_widget_next_lunch">Next lunch</string>
    <string name="title_widget_next_lunch_with_user">"%1$s's next lunch"</string>
    <string name="shortcut_grades_label_short">Grades</string>
    <string name="shortcut_grades_label_long">Show grades</string>
    <string name="shortcut_wifi_login_label_short">WiFi auto login</string>
    <string name="shortcut_wifi_login_label_long">Show WiFi auto login</string>
    <string name="shortcut_lunches_order_label_short">Lunches order</string>
    <string name="shortcut_lunches_order_label_long">Show lunches order</string>
    <string name="shortcut_lunches_burza_label_short">Lunches burza</string>
    <string name="shortcut_lunches_burza_label_long">Show lunches burza</string>
    <string name="shortcut_lunches_burza_watcher_label_short">Lunches burza watcher</string>
    <string name="shortcut_lunches_burza_watcher_label_long">Show lunches burza watcher</string>
    <string name="shortcut_attendance_label_short">Attendance</string>
    <string name="shortcut_attendance_label_long">Show attendance search</string>
    <string name="label_receiver_wifi_changed">WiFi change receiver for WiFi auto login</string>
    <string name="label_receiver_grades_widget">Purkynka Grades</string>
    <string name="label_receiver_next_lunch_widget">Purkynka Next lunch</string>
    <string name="label_service_authenticator">Account authenticator</string>
    <string name="label_service_sync_grades">Grades sync service</string>
    <string name="label_service_widget_grades">Grades widget items adapter service</string>
    <string name="label_service_sync_lunches">Lunches sync service</string>
    <string name="label_service_lunches_burza_watcher">Lunches burza watcher service</string>
    <string name="label_provider_app_preferences">App preferences</string>
    <string name="label_provider_account_active">Active account</string>
    <string name="label_provider_update">Updates</string>
    <string name="label_provider_feedback">Feedback</string>
    <string name="label_provider_grades">Grades</string>
    <string name="label_provider_grades_login">Grades credentials</string>
    <string name="label_provider_grades_preferences">Grades preferences</string>
    <string name="label_provider_wifi">WiFi auto login</string>
    <string name="label_provider_wifi_login">WiFi auto login credentials</string>
    <string name="label_provider_lunches">Lunches</string>
    <string name="label_provider_lunches_login">Lunches credentials</string>
    <string name="label_provider_lunches_preferences">Lunches preferences</string>
    <string name="action_show_dashboard">Dashboard</string>
    <string name="action_show_grades">Grades</string>
    <string name="action_show_wifi_login">WiFi auto login</string>
    <string name="action_show_lunches">Lunches</string>
    <string name="action_show_lunches_order">Order</string>
    <string name="action_show_lunches_burza">Burza</string>
    <string name="action_show_lunches_burza_watcher">Burza watcher</string>
    <string name="action_show_attendance">Attendance</string>
    <string name="action_show_settings">Settings</string>
    <string name="action_show_debug">Debug</string>
    <string name="action_contact_facebook">Facebook page</string>
    <string name="action_contact_web_page">Web page</string>
    <string name="action_add_user">Add user</string>
    <string name="menu_item_text_show">Show</string>
    <string name="menu_item_text_show_grades_date">Grades → Date</string>
    <string name="menu_item_text_show_grades_value">Grades → Value</string>
    <string name="menu_item_text_show_grades_subject">Grades → Subject</string>
    <string name="menu_item_text_show_subjects_name">Subjects → Name</string>
    <string name="menu_item_text_show_subjects_average_best">Subjects → Average ↓</string>
    <string name="menu_item_text_show_subjects_average_worse">Subjects → Average ↑</string>
    <string name="menu_item_text_semester">Semester</string>
    <string name="menu_item_text_semester_first">First</string>
    <string name="menu_item_text_semester_second">Second</string>
    <string name="menu_item_text_refresh">Refresh</string>
    <string name="menu_item_text_log_out">Logout</string>
    <string name="menu_item_text_search">Search</string>
    <string name="insert_new_account_name">New account name</string>
    <string name="insert_account_name">Account name</string>
    <string name="insert_username">Username</string>
    <string name="insert_password">Password</string>
    <string name="but_login">Login</string>
    <string name="but_create">Create</string>
    <string name="but_save">Save</string>
    <string name="but_save_and_enable">Save &amp; Enable</string>
    <string name="but_disable">Disable</string>
    <string name="but_disable_forget">Disable &amp; Forget</string>
    <string name="but_continue">Continue</string>
    <string name="but_cancel">Cancel</string>
    <string name="but_lunch_to_burza">Put to burza</string>
    <string name="but_lunch_from_burza">Take back from burza</string>
    <string name="but_lunch_order">Order</string>
    <string name="but_no_lunch">No lunch</string>
    <string name="but_start">Start</string>
    <string name="but_stop">Stop</string>
    <string name="but_stop_all">Stop all</string>
    <string name="but_no">No</string>
    <string name="but_uninstall">Uninstall</string>
    <string name="but_add_widget">Add widget</string>
    <string name="but_undo">Undo</string>
    <string name="but_previous">Previous</string>
    <string name="but_next">Next</string>
    <string name="item_title_date">Date</string>
    <string name="item_title_type">Type</string>
    <string name="item_title_subject">Subject</string>
    <string name="item_title_subject_symbol">Subject symbol</string>
    <string name="item_title_lunch_options">Lunch options</string>
    <string name="item_title_lunch_burza">Burza</string>
    <string name="item_grades_new_grade_title_main">New grade</string>
    <string name="item_subject_bad_average_info_title_main">"Bad average in"</string>
    <string name="widget_grades_not_logged_in_text">You are not logged in</string>
    <string name="widget_grades_not_logged_in_text_small">Login to your account and your grades will appear here.</string>
    <string name="content_description_logo">Logo</string>
    <string name="content_description_image_error">Error image</string>
</resources>