<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ app
  ~ Copyright (C)   2017  anty
  ~
  ~ This program is free  software: you can redistribute it and/or modify
  ~ it under the terms  of the GNU General Public License as published by
  ~ the Free Software  Foundation, either version 3 of the License, or
  ~ (at your option) any  later version.
  ~
  ~ This program is distributed in the hope that it  will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied  warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.   See the
  ~ GNU General Public License for more details.
  ~
  ~ You  should have received a copy of the GNU General Public License
  ~ along  with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".grades.GradesFragment">

    <item
        android:id="@+id/menu_group_filter_grades"
        android:title="@string/menu_item_text_show"
        app:showAsAction="ifRoom"> <!--Icon will be added after inflating-->

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_show_grades_date"
                    android:checked="true"
                    android:title="@string/menu_item_text_show_grades_date"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_show_grades_value"
                    android:checked="true"
                    android:title="@string/menu_item_text_show_grades_value"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_show_grades_subject"
                    android:checked="true"
                    android:title="@string/menu_item_text_show_grades_subject"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_show_subjects_name"
                    android:title="@string/menu_item_text_show_subjects_name"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_show_subjects_average_best"
                    android:title="@string/menu_item_text_show_subjects_average_best"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_show_subjects_average_worse"
                    android:title="@string/menu_item_text_show_subjects_average_worse"
                    app:showAsAction="never" />

            </group>
        </menu>

    </item>

    <item
        android:title="@string/menu_item_text_semester"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_semester_first"
                    android:title="@string/menu_item_text_semester_first"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_semester_second"
                    android:title="@string/menu_item_text_semester_second"
                    app:showAsAction="never" />

            </group>
        </menu>

    </item>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/menu_item_text_refresh"
        app:showAsAction="never" /> <!--Icon will be added after inflating-->

    <item
        android:id="@+id/action_log_out"
        android:title="@string/menu_item_text_log_out"
        app:showAsAction="never" /> <!--Icon will be added after inflating-->

</menu>