<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ app
  ~ Copyright (C)   2017  anty
  ~
  ~ This program is free  software: you can redistribute it and/or modify
  ~ it under the terms  of the GNU General Public License as published by
  ~ the Free Software  Foundation, either version 3 of the License, or
  ~ (at your option) any  later version.
  ~
  ~ This program is distributed in the hope that it  will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied  warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.   See the
  ~ GNU General Public License for more details.
  ~
  ~ You  should have received a copy of the GNU General Public License
  ~ along  with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_dashboard"
            android:title="@string/action_show_dashboard" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@mipmap/ic_launcher_grades"
            android:title="@string/action_show_grades" />
        <item
            android:id="@+id/nav_wifi_login"
            android:icon="@mipmap/ic_launcher_wifi"
            android:title="@string/action_show_wifi_login" />

        <item
            android:id="@+id/nav_lunches"
            android:icon="@mipmap/ic_launcher_lunches"
            android:title="@string/action_show_lunches" />

        <item
            android:id="@+id/nav_timetables"
            android:icon="@mipmap/ic_launcher_timetables"
            android:title="@string/action_show_timetables" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@mipmap/ic_launcher_attendance"
            android:title="@string/action_show_attendance" />

    </group>

    <group
        android:id="@+id/menu_group_settings"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_show_settings" />

        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/ic_bug_report_white_24dp"
            android:title="@string/action_show_debug"
            android:visible="false" />

    </group>

    <group
        android:id="@+id/menu_group_contacts"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_contact_facebook"
            android:icon="@drawable/ic_facebook_box_white_24dp"
            android:title="@string/action_contact_facebook" />
        <item
            android:id="@+id/nav_contact_web_page"
            android:icon="@drawable/ic_public_white_24dp"
            android:title="@string/action_contact_web_page" />
        <item
            android:id="@+id/nav_contact_web_page_donate"
            android:icon="@drawable/ic_monetization_on_white_24dp"
            android:title="@string/action_contact_web_page_donate" />

    </group>

</menu>
