<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ app
  ~ Copyright (C)   2018  anty
  ~
  ~ This program is free  software: you can redistribute it and/or modify
  ~ it under the terms  of the GNU General Public License as published by
  ~ the Free Software  Foundation, either version 3 of the License, or
  ~ (at your option) any  later version.
  ~
  ~ This program is distributed in the hope that it  will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied  warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.   See the
  ~ GNU General Public License for more details.
  ~
  ~ You  should have received a copy of the GNU General Public License
  ~ along  with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="grades"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_grades"
        android:shortcutShortLabel="@string/shortcut_grades_label_short"
        android:shortcutLongLabel="@string/shortcut_grades_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.grades.GradesFragment" />
    </shortcut>
    <shortcut
        android:shortcutId="wifi_login"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_wifi_login"
        android:shortcutShortLabel="@string/shortcut_wifi_login_label_short"
        android:shortcutLongLabel="@string/shortcut_wifi_login_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.wifilogin.WifiLoginFragment" />
    </shortcut>
    <shortcut
        android:shortcutId="lunches_order"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_lunches_order"
        android:shortcutShortLabel="@string/shortcut_lunches_order_label_short"
        android:shortcutLongLabel="@string/shortcut_lunches_order_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.lunches.LunchesDecideFragment?TARGET_CLASS_NAME=cz.anty.purkynka.lunches.LunchesOrderFragment" />
    </shortcut>
    <shortcut
        android:shortcutId="lunches_burza"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_lunches_burza"
        android:shortcutShortLabel="@string/shortcut_lunches_burza_label_short"
        android:shortcutLongLabel="@string/shortcut_lunches_burza_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.lunches.LunchesDecideFragment?TARGET_CLASS_NAME=cz.anty.purkynka.lunches.LunchesBurzaFragment" />
    </shortcut>
    <shortcut
        android:shortcutId="lunches_burza_watcher"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_lunches_burza_watcher"
        android:shortcutShortLabel="@string/shortcut_lunches_burza_watcher_label_short"
        android:shortcutLongLabel="@string/shortcut_lunches_burza_watcher_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.lunches.LunchesDecideFragment?TARGET_CLASS_NAME=cz.anty.purkynka.lunches.LunchesBurzaWatcherFragment" />
    </shortcut>
    <shortcut
        android:shortcutId="attendance"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_attendance"
        android:shortcutShortLabel="@string/shortcut_attendance_label_short"
        android:shortcutLongLabel="@string/shortcut_attendance_label_long">
        <!--android:shortcutDisabledMessage="@string/compose_disabled_message1"-->
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="cz.anty.purkynka"
            android:targetClass="cz.anty.purkynka.MainActivity"
            android:data="shortcut://cz.anty.purkynka.attendance.AttendanceSearchFragment" />
    </shortcut>
</shortcuts>