<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ app
  ~ Copyright (C)   2018  anty
  ~
  ~ This program is free  software: you can redistribute it and/or modify
  ~ it under the terms  of the GNU General Public License as published by
  ~ the Free Software  Foundation, either version 3 of the License, or
  ~ (at your option) any  later version.
  ~
  ~ This program is distributed in the hope that it  will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied  warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.   See the
  ~ GNU General Public License for more details.
  ~
  ~ You  should have received a copy of the GNU General Public License
  ~ along  with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/menu_group_lunches"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_lunches_order"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/action_show_lunches_order" />

        <item
            android:id="@+id/nav_lunches_burza"
            android:icon="@drawable/ic_attach_money_white_24dp"
            android:title="@string/action_show_lunches_burza" />

        <item
            android:id="@+id/nav_lunches_burza_watcher"
            android:icon="@drawable/ic_auto_fix_white_24dp"
            android:title="@string/action_show_lunches_burza_watcher" />

    </group>
</menu>