<!--
  ~ app
  ~ Copyright (C)   2018  anty
  ~
  ~ This program is free  software: you can redistribute it and/or modify
  ~ it under the terms  of the GNU General Public License as published by
  ~ the Free Software  Foundation, either version 3 of the License, or
  ~ (at your option) any  later version.
  ~
  ~ This program is distributed in the hope that it  will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied  warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.   See the
  ~ GNU General Public License for more details.
  ~
  ~ You  should have received a copy of the GNU General Public License
  ~ along  with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/content_description_image_error" /> <!--Icon will be added after inflating-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lines="1"
        android:text="@string/widget_grades_not_logged_in_text"
        android:textColor="@color/materialWhite"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:maxWidth="300dp"
        android:text="@string/widget_grades_not_logged_in_text_small"
        android:textColor="@color/materialWhite"
        android:textSize="14sp" />
</LinearLayout>